accidentally made songs a id

--- a/major-project/index.html
+++ b/major-project/index.html
@@ -85,7 +85,7 @@
 			</div>
 		</section>
 
-		<section id="songs">
+		<section class="songs">
 			<h2>Favorite Songs</h2>
 			<div class="song">
 				<h3>The View Between Villages</h3>
