fixed the css on the song titles, ready to work on sections

--- a/major-project/index.html
+++ b/major-project/index.html
@@ -39,7 +39,7 @@
 				</ul>
 			</li>
 
-			<li><a href="#">Favorite Songss</a>
+			<li><a href="#">Favorite Songs</a>
 				<ul>
 					<li><a href="view-between.html">View Between Villages</a></li>
 					<li><a href="northern-attitude.html">Northern Attitude (with Hozier)</a></li>
