ok brought back the div for image

--- a/major-project/hurt-somebody.html
+++ b/major-project/hurt-somebody.html
@@ -22,6 +22,7 @@
 
 <body>
     <main class="hurtSomebody">
+        <div class="albumcover"></div>
         <div class="tracklist">
             <ul>
                 <li>Hurt Somebody (With Julia Michaels)</li>
