putting the image into html

--- a/major-project/hurt-somebody.html
+++ b/major-project/hurt-somebody.html
@@ -22,7 +22,9 @@
 
 <body>
     <main class="hurtSomebody">
-        <div class="albumcover"></div>
+        <div class="albumcover">
+             <img src="hurt-somebody_cover.jpg">;
+        </div>
         <div class="tracklist">
             <ul>
                 <li>Hurt Somebody (With Julia Michaels)</li>
