added some html text

--- a/major-project/hurt-somebody.html
+++ b/major-project/hurt-somebody.html
@@ -23,9 +23,10 @@
 <body>
     <main class="hurtSomebody">
         <div class="albumcover">
-             <img src="hurt-somebody_cover.jpg">;
+             <img src="hurt-somebody_cover.jpg">
         </div>
         <div class="tracklist">
+            <h2>Tracklist</h2>
             <ul>
                 <li>Hurt Somebody (With Julia Michaels)</li>
                 <li>Catastrophize</li>
@@ -35,10 +36,12 @@
             </ul>
         </div>
         <div class="facts">
+            <h2>facts</h2>
             <p>EP release: February 2, 2018</p>
             <p>Run time: 17 minutes, 5 seconds</p>
         </div>
         <div class="thoughts">
+            <h2>Album Thoughts</h2>
             <p>For a debut EP, Kahan creates a strong name for himself, establishing not only a strong and unique tone,
                 but a very recognizable sound for himself. A country, indie, folk fusion, with a bigger name like Julia
                 Michaels featured on the album.</p>
