fixed typo, sizing

--- a/major-project/hurt-somebody.html
+++ b/major-project/hurt-somebody.html
@@ -36,7 +36,7 @@
             </ul>
         </div>
         <div class="facts">
-            <h2>facts</h2>
+            <h2>Facts</h2>
             <p>EP release: February 2, 2018</p>
             <p>Run time: 17 minutes, 5 seconds</p>
         </div>
