html for i was i am

--- a/major-project/cape-elizabeth.html
+++ b/major-project/cape-elizabeth.html
@@ -30,7 +30,7 @@
             <ul>
                 <li>A Troubled Mind</li>
                 <li>Close Behind</li>
-                <li>Gllue Myself Shut</li>
+                <li>Glue Myself Shut</li>
                 <li>Anyway</li>
                 <li>Maine</li>
             </ul>
