added the nav bar to all of them

--- a/major-project/cape-elizabeth.html
+++ b/major-project/cape-elizabeth.html
@@ -21,6 +21,43 @@
 </head>
 
 <body>
+
+    <nav>
+		<a id="navBurger">&#9776;</a>
+
+		<ul>
+			<li><a href="index.html">Home</a>
+			</li>
+
+			<li><a href="#">Albums/EPs</a>
+				<ul>
+					<li><a href="hurt-somebody.html">Hurt Somebody</a></li>
+					<li><a href="cape-elizabeth.html">Cape Elizabeth</a></li>
+					<li><a href="i-was-i-am.html">I was / I am</a></li>
+					<li><a href="busyhead.html">Busyhead</a></li>
+					<li><a href="stick-season.html">Stick Season</a></li>
+				</ul>
+			</li>
+
+			<li><a href="#">Favorite Songs</a>
+				<ul>
+					<li><a href="view-between.html">View Between Villages</a></li>
+					<li><a href="northern-attitude.html">Northern Attitude (with Hozier)</a></li>
+					<li><a href="everywhere-everything.html">Everywhere, Everything (with Gracie Abrams)</a></li>
+				</ul>
+			</li>
+
+			<li><a href="#">History</a>
+				<ul>
+					<li><a href="biography.html">Biography</a></li>
+					<li><a href="past-concerts.html">Past Concerts</a></li>
+				</ul>
+			</li>
+
+		</ul>
+
+	</nav>
+    
     <main class="capeElizabeth">
         <div class="albumcover">
             <img src="cape-elizabeth_cover.jpg">
