added css for first song

--- a/major-project/view-between.html
+++ b/major-project/view-between.html
@@ -23,48 +23,48 @@
 <body>
 
     <nav>
-		<a id="navBurger">&#9776;</a>
+        <a id="navBurger">&#9776;</a>
 
-		<ul>
-			<li><a href="index.html">Home</a>
-			</li>
+        <ul>
+            <li><a href="index.html">Home</a>
+            </li>
 
-			<li><a href="#">Albums/EPs</a>
-				<ul>
-					<li><a href="hurt-somebody.html">Hurt Somebody</a></li>
-					<li><a href="cape-elizabeth.html">Cape Elizabeth</a></li>
-					<li><a href="i-was-i-am.html">I was / I am</a></li>
-					<li><a href="busyhead.html">Busyhead</a></li>
-					<li><a href="stick-season.html">Stick Season</a></li>
-				</ul>
-			</li>
+            <li><a href="#">Albums/EPs</a>
+                <ul>
+                    <li><a href="hurt-somebody.html">Hurt Somebody</a></li>
+                    <li><a href="cape-elizabeth.html">Cape Elizabeth</a></li>
+                    <li><a href="i-was-i-am.html">I was / I am</a></li>
+                    <li><a href="busyhead.html">Busyhead</a></li>
+                    <li><a href="stick-season.html">Stick Season</a></li>
+                </ul>
+            </li>
 
-			<li><a href="#">Favorite Songs</a>
-				<ul>
-					<li><a href="view-between.html">View Between Villages</a></li>
-					<li><a href="northern-attitude.html">Northern Attitude (with Hozier)</a></li>
-					<li><a href="everywhere-everything.html">Everywhere, Everything (with Gracie Abrams)</a></li>
-				</ul>
-			</li>
+            <li><a href="#">Favorite Songs</a>
+                <ul>
+                    <li><a href="view-between.html">View Between Villages</a></li>
+                    <li><a href="northern-attitude.html">Northern Attitude (with Hozier)</a></li>
+                    <li><a href="everywhere-everything.html">Everywhere, Everything (with Gracie Abrams)</a></li>
+                </ul>
+            </li>
 
-			<li><a href="#">History</a>
-				<ul>
-					<li><a href="biography.html">Biography</a></li>
-					<li><a href="past-concerts.html">Past Concerts</a></li>
-				</ul>
-			</li>
+            <li><a href="#">History</a>
+                <ul>
+                    <li><a href="biography.html">Biography</a></li>
+                    <li><a href="past-concerts.html">Past Concerts</a></li>
+                </ul>
+            </li>
 
-		</ul>
+        </ul>
 
-	</nav>
-    
+    </nav>
+
     <main class="viewBetween">
         <header>
             <h1>The View Between Villages</h1>
         </header>
         <div class="lyrics">
             <h2>Lyrics</h2>
-            <p>Air in my lungs</p>>
+            <p>Air in my lungs</p>
             <p>'Til the road begins</p>
             <p>As the last of the bugs</p>
             <p>And I'm splitting the road down the middle</p>
@@ -86,10 +86,13 @@
         </div>
         <div class="reason">
             <h2>Reasoning</h2>
-            <p>I explained this on my review of Stick Season the album, but this is by far my favorite Noah Kahan song. It is lyrically beautiful, and it is melodically gorgeous, focusing in on big moments instrumentally.</p>
+            <p>I explained this on my review of Stick Season the album, but this is by far my favorite Noah Kahan song.
+                It is lyrically beautiful, and it is melodically gorgeous, focusing in on big moments instrumentally.
+            </p>
         </div>
         <div class="link">
-            <h2><a href="https://www.youtube.com/watch?v=O53pjBjmojQ&list=RDO53pjBjmojQ&start_radio=1">Click here to listen on YouTube</a></h2>
+            <h2><a href="https://www.youtube.com/watch?v=O53pjBjmojQ&list=RDO53pjBjmojQ&start_radio=1">Click here to
+                    listen on YouTube</a></h2>
         </div>
 
     </main>
