--- a/major-project/past-concerts.html
+++ b/major-project/past-concerts.html
@@ -60,32 +60,17 @@
 
     <main class="concerts">
         <div id="images">
-            <section id="lover">
-                <h2>Taylor Swift opens her tour with her set from the album Lover.</h2>
+            <section id="concert1">
+                <h2>The Busyhead Tour (2019)</h2>
             </section>
-            <section id="fearless">
-                <h2>She then moves on to her set from the Fearless album.</h2>
+            <section id="concert2">
+                <h2>The I Was / I Am Tour (2021)</h2>
             </section>
-            <section id="red">
-                <h2>Taylor Swift the performs a few songs from her Red album.</h2>
+            <section id="concert3">
+                <h2>The Stick Season Tour (2022-2023)</h2>
             </section>
-            <section id="speakNow">
-                <h2>Then she performs just one song from her Speak Now album.</h2>
-            </section>
-            <section id="reputation">
-                <h2>She then swfitly moves into her beloved reputation set.</h2>
-            </section>
-            <section id="folklore">
-                <h2>Toning it down, she now performs her folklore album.</h2>
-            </section>
-            <section id="evermore">
-                <h2>Transitioning seamlessly into her evermore set.</h2>
-            </section>
-            <section id="nine">
-                <h2>Switching beats, she jumps into her popular 1989 set.</h2>
-            </section>
-            <section id="midnights">
-                <h2>Finally, she closes out the show with her Midnights album</h2>
+            <section id="concert4">
+                <h2>The Stick Season (We'll All Be Here Forever) Tour (2024)</h2>
             </section>
         </div>
     </main>
