--- a/major-project/biography.html
+++ b/major-project/biography.html
@@ -60,49 +60,16 @@
 
     <main class="stickSeason">
         <div class="albumcover">
-            <img src="stick-season_cover.jpg">
+            <img src="noah.jpg">
         </div>
         <div class="tracklist">
             <h2>Tracklist</h2>
             <ul>
-                <li>Northern Attitude</li>
-                <li>Stick Season</li>
-                <li>All My Love</li>
-                <li>She Calls Me Back</li>
-                <li>Come Over</li>
-                <li>New Perspective</li>
-                <li>Everywhere, Everything</li>
-                <li>Orange Juice</li>
-                <li>Strawberry Wine</li>
-                <li>Growing Sideways</li>
-                <li>Halloween</li>
-                <li>Homesick</li>
-                <li>Still</li>
-                <li>The View Between Villages</li>
+                <li>Age: 28 years</li>
+                <li>Birthday: January 1, 1997</li>
+                <li>Born in Strafford, Vermont</li>
             </ul>
         </div>
-        <div class="facts">
-            <h2>Facts</h2>
-            <p>Album release: October 14, 2022</p>
-            <p>Run time: 55 minutes, 28 seconds</p>
-        </div>
-        <div class="thoughts">
-            <h2>Album Thoughts</h2>
-            <p>This is his most recent album, and also his best album to date. This is what launched Kahan's career,
-                with the song Stick Season reaching 1 billion streams on Spotfiy. This is a no-skip album, where Kahan
-                has seriously settled into his sound and created a name for himself. He did end up releasing a second
-                version of this album, however it was all the same songs with features on them, so I decided not to
-                include it.</p>
-        </div>
-        <div class="favSong">
-            <h2>Favorite Song</h2>
-            <p>The View Between Villages</p>
-            <p>All 3 of my top favorite songs come from this album, but The View Between Villages really stands out
-                amongst the rest for me. It is one of my most streamed songs of all time, and it's because not only does
-                he allow you to connect to it on a deep level lyrically, but there a big moments instrumentally that
-                really make you feel. </p>
-        </div>
-
     </main>
 
     <footer>
