--- a/major-project/biography.html
+++ b/major-project/biography.html
@@ -63,11 +63,13 @@
             <img src="noah.jpg">
         </div>
         <div class="tracklist">
-            <h2>Tracklist</h2>
+            <h2>Biography</h2>
             <ul>
                 <li>Age: 28 years</li>
                 <li>Birthday: January 1, 1997</li>
                 <li>Born in Strafford, Vermont</li>
+                <li>Signed with Republic Records in 2017</li>
+                <li>Grammy nomination for Best New Artist</li>
             </ul>
         </div>
     </main>
