updated main page

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 		<li><a href="/codelogs/log3.html">Code Log 3: CSS Media Queries</a></li>
 		<li><a href="/codelogs/log4.html">Code Log 4: CSS Color</a></li>
 		<li><a href="/codelogs/log5.html">Code Log 5: Images</a></li>
+		<li><a href="/codelogs/log6.html">Code Log 6: Code References</a></li>
 	</ul>
 
 	<h2>Tiny Projects</h2>
@@ -43,7 +44,8 @@
 	</ul>
 
 	<h2>Major Project</h2>
-	<p>Coming soon.</p>
+	<p><a href="/major-project/">Major Project: Noah Kahan</a></p>
+	<p>This project is a website dedicated to Noah Kahan and his music, for both fans and people who want to get into him.</p>
 
 </body>
 </html>
