--- a/codelogs/log6.html
+++ b/codelogs/log6.html
@@ -41,6 +41,7 @@
 
         h2,
         p {
+            color: white;
             text-align: center;
             padding-left: 10vw;
             padding-right: 10vw;
