--- a/codelogs/log6.html
+++ b/codelogs/log6.html
@@ -48,17 +48,8 @@
             font-size: 2em;
         }
 
-        a:link {
-            color: rgb(79, 79, 79);
-        }
-
-        a:visited {
-            color: rgb(79, 79, 79);
-        }
-
-
-        a:hover {
-            color: rgb(81, 66, 66);
+        h2 {
+            font-size: 1.5em;
         }
     </style>
 
