fixed header and links

--- a/codelogs/log6.html
+++ b/codelogs/log6.html
@@ -39,6 +39,11 @@
             font-family: 'Montserrat', sans-serif;
         }
 
+        h1 {
+            text-align: center;
+            font-size: 3em;
+        }
+
         h2,
         p {
             color: white;
@@ -48,7 +53,7 @@
             font-size: 2em;
         }
 
-        h2 {
+        p {
             font-size: 1.5em;
         }
     </style>
@@ -64,10 +69,10 @@
         <h2>What did you look up?</h2>
         <p>I looked up the padding css tag.</p>
         <h2>What sites did you consult? Include links to the specific pages on those 4 resources.</h2>
-        <p><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Properties/padding"></a>MDN</p>
-        <p><a href="https://www.w3schools.com/css/css_padding.asp"></a>W3 Schools</p>
-        <p><a href="https://css-tricks.com/almanac/properties/p/padding/"></a>CSS Tricks</p>
-        <p><a href="https://www.browserstack.com/guide/css-responsive-layout"></a>Browser Stack</p>
+        <p><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Properties/padding">MDN</a></p>
+        <p><a href="https://www.w3schools.com/css/css_padding.asp">W3 Schools</a></p>
+        <p><a href="https://css-tricks.com/almanac/properties/p/padding/">CSS Tricks</a></p>
+        <p><a href="https://www.browserstack.com/guide/css-responsive-layout">Browser Stack</a></p>
         <h2>What are the differences in the information presented on each site?</h2>
         <p>On the Browser Stack website, there was no acutal page dedicated to just padding. The only thing that I could
             find was building a responsive page. W3 Schools does padding in pixels, but all of the other websites do it
