--- a/codelogs/log6.html
+++ b/codelogs/log6.html
@@ -40,6 +40,7 @@
         }
 
         h1 {
+            padding-top: 5vh;
             text-align: center;
             font-size: 3em;
         }
@@ -55,6 +56,19 @@
 
         p {
             font-size: 1.5em;
+        }
+
+        a:link {
+            color: #ffffff;
+        }
+
+        a:visited {
+            color: #ffffff;
+        }
+
+
+        a:hover {
+            color: #615656;
         }
     </style>
 
@@ -83,7 +97,7 @@
             what the effects are on an actual page. Possibly even a demonstration, with pictures of how it affects the
             page. When looking at code, it can be really confusing as to how that is actually going to affect your page,
             so it would be really nice to know exactly what it's going to look like.</p>
-        </h2>Do any of your 4 resources stand out as particularly good or bad?</h2>
+        <h2>Do any of your 4 resources stand out as particularly good or bad?</h2>
         <p>Honestly, I kind of thought they were all the same, other than the one where I couldn't actually find a
             specifc section for how to create and use padding. That stuck out as worse, the Browser Stack one, because
             it was hard to find anything. But all of the other ones did their job.</p>
